@@ -331,7 +331,6 @@ class Tx_Seminars_FrontEnd_EventEditor extends Tx_Seminars_FrontEnd_Editor {
 			if ($showEditButton && $frontEndUserIsOwner) {
 				$editButtonConfiguration['name'] = 'editPlaceButton_' . $place->getUid();
 				$editButtonConfiguration['onclick']['userobj']['php'] = '
-					require_once(\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath(\'oelib\') . \'class.tx_oelib_Autoloader.php\');
 					return Tx_Seminars_FrontEnd_EventEditor::showEditPlaceModalBox($this, ' . $place->getUid() . ');
 					';
 				$editButton = $formidable->_makeRenderlet(
@@ -405,7 +404,6 @@ class Tx_Seminars_FrontEnd_EventEditor extends Tx_Seminars_FrontEnd_Editor {
 			if ($showEditButton && $frontEndUserIsOwner) {
 				$editButtonConfiguration['name'] = 'edit' . $type . 'Button_' . $speaker->getUid();
 				$editButtonConfiguration['onclick']['userobj']['php'] = '
-					require_once(\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath(\'oelib\') . \'class.tx_oelib_Autoloader.php\');
 					return Tx_Seminars_FrontEnd_EventEditor::showEditSpeakerModalBox($this, ' . $speaker->getUid() . ');
 					';
 				$editButton = $formidable->_makeRenderlet(
@@ -478,7 +476,6 @@ class Tx_Seminars_FrontEnd_EventEditor extends Tx_Seminars_FrontEnd_Editor {
 			if ($showEditButton && $frontEndUserIsOwner) {
 				$editButtonConfiguration['name'] = 'editCheckboxButton_' . $checkbox->getUid();
 				$editButtonConfiguration['onclick']['userobj']['php'] = '
-					require_once(\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath(\'oelib\') . \'class.tx_oelib_Autoloader.php\');
 					return Tx_Seminars_FrontEnd_EventEditor::showEditCheckboxModalBox($this, ' . $checkbox->getUid() . ');
 					';
 				$editButton = $formidable->_makeRenderlet(
@@ -551,7 +548,6 @@ class Tx_Seminars_FrontEnd_EventEditor extends Tx_Seminars_FrontEnd_Editor {
 				$editButtonConfiguration['name'] = 'editTargetGroupButton_' .
 					$targetGroup->getUid();
 				$editButtonConfiguration['onclick']['userobj']['php'] = '
-					require_once(\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath(\'oelib\') . \'class.tx_oelib_Autoloader.php\');
 					return Tx_Seminars_FrontEnd_EventEditor::showEditTargetGroupModalBox($this, ' . $targetGroup->getUid() . ');
 					';
 				$editButton = $formidable->_makeRenderlet(
@@ -1450,7 +1446,6 @@ class Tx_Seminars_FrontEnd_EventEditor extends Tx_Seminars_FrontEnd_Editor {
 		);
 		$editButtonConfiguration['name'] = 'editPlaceButton_' . $place->getUid();
 		$editButtonConfiguration['onclick']['userobj']['php'] = '
-			require_once(\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath(\'oelib\') . \'class.tx_oelib_Autoloader.php\');
 			return Tx_Seminars_FrontEnd_EventEditor::showEditPlaceModalBox($this, ' . $place->getUid() . ');
 			';
 		$editButton = $formidable->_makeRenderlet(
@@ -1752,7 +1747,6 @@ class Tx_Seminars_FrontEnd_EventEditor extends Tx_Seminars_FrontEnd_Editor {
 		);
 		$editButtonConfiguration['name'] = 'editSpeakerButton_' . $speaker->getUid();
 		$editButtonConfiguration['onclick']['userobj']['php'] = '
-			require_once(\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath(\'oelib\') . \'class.tx_oelib_Autoloader.php\');
 			return Tx_Seminars_FrontEnd_EventEditor::showEditSpeakerModalBox($this, ' . $speaker->getUid() . ');
 			';
 		$editButton = $formidable->_makeRenderlet(
@@ -2022,7 +2016,6 @@ class Tx_Seminars_FrontEnd_EventEditor extends Tx_Seminars_FrontEnd_Editor {
 		);
 		$editButtonConfiguration['name'] = 'editCheckboxButton_' . $checkbox->getUid();
 		$editButtonConfiguration['onclick']['userobj']['php'] = '
-			require_once(\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath(\'oelib\') . \'class.tx_oelib_Autoloader.php\');
 			return Tx_Seminars_FrontEnd_EventEditor::showEditCheckboxModalBox($this, ' . $checkbox->getUid() . ');
 			';
 		$editButton = $formidable->_makeRenderlet(
@@ -2231,7 +2224,6 @@ class Tx_Seminars_FrontEnd_EventEditor extends Tx_Seminars_FrontEnd_Editor {
 		$editButtonConfiguration['name'] = 'editTargetGroupButton_' .
 			$targetGroup->getUid();
 		$editButtonConfiguration['onclick']['userobj']['php'] = '
-			require_once(\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath(\'oelib\') . \'class.tx_oelib_Autoloader.php\');
 			return Tx_Seminars_FrontEnd_EventEditor::showEditTargetGroupModalBox($this, ' . $targetGroup->getUid() . ');
 			';
 		$editButton = $formidable->_makeRenderlet(
